# old-lucianoratamero.github.io

./: .babelrc  .eslintrc.js  .gitignore  .travis.yml  404.html  CNAME  Gruntfile.js  Makefile  README.md  app.07789139.css  app.07789139.css.br  app.616429c0.js  app.616429c0.js.br  eu_fb_small.ea7c2721.jpg.br  index.html  index.html.br  medium_post.md  package-lock.json  package.json  postcss.config.js  pyproject.toml  ratamero.com.lektorproject  requirements.txt
blog/: feed.xml  index.html
build-tools/: build.js  compressor.js  devbuild.js
configs/: disqus-comments.ini
content/: contents.lr
css/: bgeasteregg.css  main.css
curriculum/: Gruntfile.js  curriculum.html  package.json  template.html
en/: index.html
fonts/: anonymous_pro-webfont.eot  anonymous_pro.css  anonymous_pro_b-webfont.eot  anonymous_pro_bi-webfont.eot  anonymous_pro_i-webfont.eot  josefinslab-bold-webfont.eot  josefinslab-bolditalic-webfont.eot  josefinslab-italic-webfont.eot  josefinslab-light-webfont.eot  josefinslab-lightitalic-webfont.eot  josefinslab-regular-webfont.eot  josefinslab-semibold-webfont.eot  josefinslab-semibolditalic-webfont.eot  josefinslab-thin-webfont.eot  josefinslab-thinitalic-webfont.eot  josefinslab.css
js/: ajaxify-html5.js  main.js  main.js.br  main.map  main.map.br
lektor/: blog.lektorproject  requirements.txt
models/: blog-post.ini  blog.ini
posts-todo/: post novo.html
previous-talks/: index.html
scss/: colors.scss  flexboxgrid.scss  main.css  main.css.br  main.js  main.js.br  main.map  main.map.br  main.scss  overrides.scss  ripple.scss
(+777 files in other folders)
