[tool.poetry]
name = "ratamero"
version = "0.1.0"
description = ""
authors = ["Luciano Ratamero <luciano@ratamero.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pylint = "^2.2"
lektor = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
